# ScePaf

./: CMakeLists.txt  PackageCMakeLists.txt.in  README.md  ScePaf-appsettings.patch  ScePaf.patch  ScePafConfig.cmake.in  emd2yml.py  patch.sh  rco.cmake
.github/workflows/: ci.yml
